trying to fix favicon

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,10 @@ const isHome = Astro.url.pathname === "/";
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+
     <link
       rel="preload"
       href="/pointcloud/character.points.bin"
